--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -15,6 +15,20 @@ label {
     margin-bottom: 5px;
 }
 
+#login {
+    margin-bottom: 30px
+}
+
+.underText {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    height: 19px;
+}
+
+.passmatch {
+    color: rgb(191, 0, 0);
+}
+
 .input {
     font-size: 22px;
     background: rgb(72, 120, 94);
@@ -24,7 +38,6 @@ label {
     box-shadow: 0px 1px 10px 5px rgba(34, 80, 47, 0.886) inset;
     outline: none;
     padding: 5px 15px 5px 15px;
-    margin-bottom: 20px;
 }
 
 .signUpBtn {
