--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -29,6 +29,23 @@ label {
     color: rgb(191, 0, 0);
 }
 
+.showPass {
+    position: absolute;
+    display: inline-block;
+    right: 11px;
+    bottom: 43px;
+}
+
+.showPass:hover {
+    cursor: pointer;
+}
+
+.inputWrapper {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
 .input {
     font-size: 22px;
     background: rgb(72, 120, 94);
