--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -3,7 +3,7 @@
 }
 
 .signUpForm {
-    padding: 30px;
+    padding: 30px 30px 0px 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,6 +40,23 @@ label {
     cursor: pointer;
 }
 
+.info {
+    position: absolute;
+    display: inline-block;
+    top: 43px;
+    left: 380px;
+    background: rgba(209, 173, 75, 0.557);
+    padding: 4px 8px;
+}
+
+ul, li {
+    list-style-type: none;
+    font-size: 14px;
+    padding: 4px 8px;
+    margin: 0;
+    width: 225px;
+}
+
 .inputWrapper {
     display: flex;
     flex-direction: column;
@@ -72,7 +89,17 @@ label {
     border-radius: 5px;
 }
 
-.signUpBtn:hover {
+.signUpBtn:not(:disabled):hover {
     background: rgb(72, 120, 94);
     cursor: pointer;
+}
+
+.signUpBtn:disabled {
+    cursor: not-allowed;
+}
+
+.space {
+    display: flex;
+    justify-content: center;
+    color: red;
 }
